add warning signs with position

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 placeholder="asu"
                 required
               />
+              <img class="warning" src="/images/warning.png" alt="warning" />
             </div>
             <div class="form-group">
               <label for="email">email:</label>
@@ -42,6 +43,7 @@
                 placeholder="asu@email.com"
                 required
               />
+              <img class="warning" src="/images/warning.png" alt="warning" />
             </div>
             <div class="form-group">
               <label for="url">website:</label>
@@ -52,6 +54,7 @@
                 placeholder="https://asu.com"
                 required
               />
+              <img class="warning" src="/images/warning.png" alt="warning" />
             </div>
             <div class="form-group">
               <label for="application">medium:</label>
@@ -63,6 +66,7 @@
               </select>
             </div>
           </fieldset>
+          <button type="submit"><h1>submit</h1></button>
         </form>
       </section>
     </main>
